Add local-ai provider

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4118,6 +4118,158 @@
    "source": [
     "import transformers"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are a few options ranging from direct to slightly more conversational. Choose the one that best fits your relationship with your boss.\n",
+      "\n",
+      "**Option 1: Clear\n",
+      " and direct (Best for most situations)**\n",
+      "\n",
+      "**Subject:** WFH Request for Tomorrow, [insert date here] – [Your Name]\n",
+      "\n",
+      "Hi [Boss's\n",
+      " Name],\n",
+      "\n",
+      "I would like to request to work from home tomorrow, [insert day, e.g., Tuesday].\n",
+      "\n",
+      "I need to be present at my apartment to let\n",
+      " in a repairman for some necessary maintenance during business hours.\n",
+      "\n",
+      "Please be assured that I will be fully connected with stable internet and reachable via email and chat as usual. I\n",
+      " do not anticipate any disruption to my workflow.\n",
+      "\n",
+      "Please let me know if this works for you.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "[Your Name]\n",
+      "\n",
+      "***\n",
+      "\n",
+      "**Option \n",
+      "2: Slightly softer tone (If you have a casual rapport)**\n",
+      "\n",
+      "**Subject:** Working from home tomorrow - [Your Name]\n",
+      "\n",
+      "Hi [Boss's\n",
+      " Name],\n",
+      "\n",
+      "Would it be okay if I logged in from home tomorrow, [insert day]?\n",
+      "\n",
+      "I have a repairman scheduled to come by my place during the day,\n",
+      " and I need to be here to let them in.\n",
+      "\n",
+      "My home setup is ready to go, so I’ll be fully online and working my normal hours without interruption\n",
+      ".\n",
+      "\n",
+      "Thanks for understanding,\n",
+      "\n",
+      "[Your Name]\n",
+      "\n",
+      "***\n",
+      "\n",
+      "**Option 3: Short and specific (If your boss prefers brevity)**\n",
+      "\n",
+      "**Subject:** WFH\n",
+      " tomorrow, [Date] due to apartment repairs\n",
+      "\n",
+      "Hi [Boss's Name],\n",
+      "\n",
+      "I’m writing to request to work from home tomorrow to accommodate a necessary\n",
+      " apartment repair appointment.\n",
+      "\n",
+      "I will be fully reachable and working normally throughout the day.\n",
+      "\n",
+      "Please let me know if this is approved.\n",
+      "\n",
+      "Thanks,\n",
+      "\n",
+      "[Your Name\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To run this code you need to install the following dependencies:\n",
+    "# pip install google-genai\n",
+    "\n",
+    "import base64\n",
+    "import mimetypes\n",
+    "import os\n",
+    "from google import genai\n",
+    "from google.genai import types\n",
+    "\n",
+    "\n",
+    "def save_binary_file(file_name, data):\n",
+    "    f = open(file_name, \"wb\")\n",
+    "    f.write(data)\n",
+    "    f.close()\n",
+    "    print(f\"File saved to to: {file_name}\")\n",
+    "\n",
+    "\n",
+    "def generate():\n",
+    "    client = genai.Client(\n",
+    "        api_key=os.environ.get(\"GEMINI_API_KEY\"),\n",
+    "    )\n",
+    "\n",
+    "    model = \"gemini-3-pro-image-preview\"\n",
+    "    contents = [\n",
+    "        types.Content(\n",
+    "            role=\"user\",\n",
+    "            parts=[\n",
+    "                types.Part.from_text(text=\"\"\"INSERT_INPUT_HERE\"\"\"),\n",
+    "            ],\n",
+    "        ),\n",
+    "    ]\n",
+    "    tools = [\n",
+    "        types.Tool(googleSearch=types.GoogleSearch(\n",
+    "        )),\n",
+    "    ]\n",
+    "    generate_content_config = types.GenerateContentConfig(\n",
+    "        response_modalities=[\n",
+    "            \"IMAGE\",\n",
+    "            \"TEXT\",\n",
+    "        ],\n",
+    "        image_config=types.ImageConfig(\n",
+    "            aspect_ratio=\"16:9\",\n",
+    "            image_size=\"4K\",\n",
+    "        ),\n",
+    "        tools=tools,\n",
+    "    )\n",
+    "\n",
+    "    file_index = 0\n",
+    "    for chunk in client.models.generate_content_stream(\n",
+    "        model=model,\n",
+    "        contents=contents,\n",
+    "        config=generate_content_config,\n",
+    "    ):\n",
+    "        if (\n",
+    "            chunk.candidates is None\n",
+    "            or chunk.candidates[0].content is None\n",
+    "            or chunk.candidates[0].content.parts is None\n",
+    "        ):\n",
+    "            continue\n",
+    "        if chunk.candidates[0].content.parts[0].inline_data and chunk.candidates[0].content.parts[0].inline_data.data:\n",
+    "            file_name = f\"ENTER_FILE_NAME_{file_index}\"\n",
+    "            file_index += 1\n",
+    "            inline_data = chunk.candidates[0].content.parts[0].inline_data\n",
+    "            data_buffer = inline_data.data\n",
+    "            file_extension = mimetypes.guess_extension(inline_data.mime_type)\n",
+    "            save_binary_file(f\"{file_name}{file_extension}\", data_buffer)\n",
+    "        else:\n",
+    "            print(chunk.text)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    generate()\n"
+   ]
   }
  ],
  "metadata": {
