Add asr, tta, voice model dir

--- a/provider_test.ipynb
+++ b/provider_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6455ec2d",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c32da5f8",
    "metadata": {},
    "outputs": [],
@@ -21,22 +21,32 @@
     "import openai\n",
     "from openai import OpenAI\n",
     "\n",
-    "client = OpenAI(api_key=get_key('.env', 'OPENAI_API_KEY'))"
+    "client = OpenAI(api_key=get_key('.env', 'OPENAI_API_KEY'))\n",
+    "\n",
+    "models = client.models.list()\n",
+    "\n",
+    "models\n",
+    "\n",
+    "model_list=[]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8ed9e872",
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = client.models.list()"
+    "for m in models:\n",
+    "    if \"image\" in m.id.lower():\n",
+    "        model_list.append(m.id)\n",
+    "\n",
+    "model_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "eba75793",
    "metadata": {},
    "outputs": [
@@ -52,34 +62,32 @@
     }
    ],
    "source": [
-    "models"
+    "for m in models:\n",
+    "    if \"image\" in m.id.lower():\n",
+    "        model_list.append(m.id)\n",
+    "\n",
+    "model_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1fcc6102",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model_list=[]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d225118e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for m in models:\n",
-    "    if \"image\" in m.id.lower():\n",
-    "        model_list.append(m.id)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d3804948",
    "metadata": {},
    "outputs": [
@@ -94,9 +102,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "model_list"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1586,6 +1592,87 @@
    ],
    "source": [
     "result.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6b8c0f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['qwen3-8b',\n",
+       " 'llama-4-scout-17b-16e-instruct',\n",
+       " 'google_gemma-3-27b-it-qat',\n",
+       " 'google/gemma-3-12b',\n",
+       " 'trillion-7b-preview',\n",
+       " 'meta-llama-3.2-11b-vision-instruct-mlx@4bit',\n",
+       " 'meta-llama-3.2-11b-vision-instruct-mlx@6bit',\n",
+       " 'meta-llama-3.1-8b-instruct',\n",
+       " 'mistral-small-3.2-24b-instruct-2506-mlx-gs128',\n",
+       " 'mistral-small-3.2-24b-instruct-2506',\n",
+       " 'qwen_qwen3-vl-30b-a3b-thinking',\n",
+       " 'qwen_qwen3-vl-30b-a3b-instruct',\n",
+       " 'openai/gpt-oss-20b-mxfp4-q8',\n",
+       " 'qwen/qwen3-vl-8b',\n",
+       " 'qwen3-vl-8b-thinking-mlx',\n",
+       " 'qwen3-30b-a3b-instruct-2507',\n",
+       " 'openai/gpt-oss-20b',\n",
+       " 'qwen3-14b-mlx',\n",
+       " 'mistral-small-24b-instruct-2501',\n",
+       " 'qwen3-8b-mlx']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import lmstudio as lms\n",
+    "\n",
+    "client = lms.Client(api_host=\"localhost:1234\")\n",
+    "downloaded_llm = client.list_downloaded_models(\"llm\")\n",
+    "\n",
+    "llm = []\n",
+    "\n",
+    "for m in downloaded_llm:\n",
+    "    llm.append(m.model_key)\n",
+    "\n",
+    "llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a862b981",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['qwen3-vl:8b', 'gpt-oss:20b']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ollama\n",
+    "\n",
+    "llm = []\n",
+    "\n",
+    "client = ollama.Client(host=\"http://localhost:11434\")\n",
+    "models = client.list().models\n",
+    "\n",
+    "for m in models:\n",
+    "    llm.append(m.model)\n",
+    "\n",
+    "llm"
    ]
   }
  ],
