MModify models.py to include OllamaIntegrator and improve API key retrieval. Comment out unused code in provider_llm_models.py for clarity.

--- a/provider_test.ipynb
+++ b/provider_test.ipynb
@@ -48,34 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b21aa11c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import openai\n",
-    "from openai import OpenAI\n",
-    "\n",
-    "client = OpenAI(api_key=get_key('.env', 'OPENAI_API_KEY'))\n",
-    "\n",
-    "models = client.models.list()\n",
-    "\n",
-    "gpt_pattern = [\"gpt-image\"]\n",
-    "\n",
-    "image_models = []\n",
-    "\n",
-    "for m in models.data:\n",
-    "    model_id = m.id\n",
-    "\n",
-    "    include = any(k in model_id.lower() for k in gpt_pattern)\n",
-    "    if include:\n",
-    "        image_models.append(model_id)\n",
-    "\n",
-    "image_models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "7d4ef44f",
    "metadata": {},
    "outputs": [],
@@ -83,7 +55,19 @@
     "import anthropic\n",
     "from anthropic import Anthropic\n",
     "\n",
-    "client = Anthropic(api_key=get_key(\".env\", \"ANTHROPIC_API_KEY\"))"
+    "client = Anthropic(api_key=get_key(\".env\", \"ANTHROPIC_API_KEY\"))\n",
+    "\n",
+    "llm = []\n",
+    "models = client.models.list()\n",
+    "\n",
+    "for m in models.data:\n",
+    "    model_id = m.id\n",
+    "    exclude = \"claude-3\" not in model_id.lower()\n",
+    "\n",
+    "    if exclude:\n",
+    "        llm.append(model_id)\n",
+    "        \n",
+    "llm"
    ]
   },
   {
@@ -95,7 +79,23 @@
    "source": [
     "from google import genai\n",
     "\n",
-    "client = genai.Client(api_key=get_key(\".env\", \"GEMINI_API_KEY\"))"
+    "client = genai.Client(api_key=get_key(\".env\", \"GEMINI_API_KEY\"))\n",
+    "\n",
+    "models = client.models.list()\n",
+    "\n",
+    "llm = []\n",
+    "\n",
+    "for m in models.page:\n",
+    "    include = any(k in m.name.lower() for k in [\"gemini\", \"gemma\"])\n",
+    "    exclude_type = all(k not in m.name.lower() for k in [\"embedding\", \"tts\", \"exp\"])\n",
+    "    exclude_model = all(k not in m.name.lower() for k in [\"gemini-2.0\"])\n",
+    "\n",
+    "    preview_check = (\"preview\" not in m.name.lower()) or any(k in m.name.lower() for k in [\"gemini-3\"])\n",
+    "\n",
+    "    if \"generateContent\" in m.supported_actions and include and exclude_type and exclude_model and preview_check:\n",
+    "        llm.append(m.name)\n",
+    "\n",
+    "llm"
    ]
   },
   {
@@ -108,7 +108,11 @@
     "import perplexity\n",
     "from perplexity import Perplexity\n",
     "\n",
-    "client = Perplexity(api_key=get_key(\".env\", \"PERPLEXITY_API_KEY\"))"
+    "client = Perplexity(api_key=get_key(\".env\", \"PERPLEXITY_API_KEY\"))\n",
+    "\n",
+    "llm = []\n",
+    "\n",
+    "# models = client.chat.completions.create(messages='hi',model='sonar-reasoning')"
    ]
   },
   {
@@ -186,6 +190,34 @@
     "    llm.append(m.model)\n",
     "\n",
     "llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dc9ad45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI(api_key=get_key('.env', 'OPENAI_API_KEY'))\n",
+    "\n",
+    "models = client.models.list()\n",
+    "\n",
+    "gpt_pattern = [\"gpt-image\"]\n",
+    "\n",
+    "image_models = []\n",
+    "\n",
+    "for m in models.data:\n",
+    "    model_id = m.id\n",
+    "\n",
+    "    include = any(k in model_id.lower() for k in gpt_pattern)\n",
+    "    if include:\n",
+    "        image_models.append(model_id)\n",
+    "\n",
+    "image_models"
    ]
   },
   {
