Now comfyUI Models is only support from providers

--- a/provider_test.ipynb
+++ b/provider_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6455ec2d",
    "metadata": {},
    "outputs": [],
@@ -355,14 +355,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "dd42a76f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import deepl\n",
     "\n",
-    "deepl_client = deepl.DeepLClient(auth_key=get_key('.env', 'DEEPL_AUTH_TOKEN'))"
+    "deepl_client = deepl.DeepLClient(auth_key=get_key('.env', 'DEEPL_AUTH_TOKEN'))\n",
+    "\n",
+    "translator = deepl_client.translate_text(\"로컬 머신을 위한 AI 컴패니언은 UNIX/Linux 커널의 OS에 최적화 되어있습니다. Windows에서도 사용은 가능하지만 Windows에서 직접 실행할경우 GPU 가속을 사용할수 없습니다. Windows에서의 로컬 머신을 위한 AI 컴패니언을 제대로 사용하기 위해 WSL2 환경에서의 사용을 권장합니다.\", target_lang=\"ZH-HANS\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e32193f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "本地机器的AI伴侣已针对UNIX/Linux内核的操作系统进行优化。虽然可在Windows环境下使用，但直接在Windows上运行时无法启用GPU加速功能。为确保在Windows系统中正确使用本地机器的AI伴侣，建议在WSL2环境下运行。\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(translator.text)"
    ]
   },
   {
