--- a/translations/zh_TW.json
+++ b/translations/zh_TW.json
@@ -6,6 +6,8 @@
   "translator_title": "翻譯器",
   "download_title": "模型下載",
   "settings_title": "設定",
+  "mcp_client_title": "MCP客戶端",
+  "mcp_tools_title": "MCP工具",
   "select_session_info": "此時將顯示選定的會話。",
   "language_select": "選擇語言",
   "language_info": "選擇界面語言",
