--- a/translations/ko.json
+++ b/translations/ko.json
@@ -6,6 +6,8 @@
   "translator_title": "번역기",
   "download_title": "모델 다운로드",
   "settings_title": "설정",
+  "mcp_client_title": "MCP 클라이언트",
+  "mcp_tools_title": "MCP 도구",
   "select_session_info": "선택된 세션이 표시됩니다.",
   "language_select": "언어 선택",
   "language_info": "인터페이스 언어를 선택하세요",
